basic_services/api/image_api/prod/00-image-api-deployment.prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "image-api"
  namespace: "leaf-image-management-system"
  labels:
    app: "image-api"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "image-api"
  template:
    metadata:
      labels:
        app: "image-api"
    spec:
      containers:
        - name: "image-api"
          image: "12221994/image_api:latest"
          ports:
            - containerPort: 8080
            - containerPort: 8050
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "500m"
